swagger handlers
